Borrar columna lateral y eliminar (Próximamente) del top menú

--- a/FIP/InicialFIP/CCNA_RandS.html
+++ b/FIP/InicialFIP/CCNA_RandS.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
@@ -69,7 +70,7 @@
 				<ul>
 					<li><a href="CCNA_RandS.html">CCNA Routing & Switching</a></li>
 					<li><a href="CCNA_voice.html">CCNA Voice</a></li>
-					<li><a href="CCNP_RandS.html">CCNP Routing (Pr&oacute;ximamente)</a></li>
+					<li><a href="CCNP_RandS.html">CCNP Routing</a></li>
 				</ul>
 			</li>	
 			<li><a href="ventajas.html">Ventajas</a></li>
@@ -84,6 +85,7 @@
 <div id="main">
 <div id="contenedor">
 
+<!--
 <div id="lateral">
 <font color="#708090">
 <marquee direction=up scrolldelay="1" height=50% scrollAmount="1" align="middle" onmouseover="this.stop()" onmouseout="this.start()"><hr align="RIGHT" size="0" width="300" color="white" noshade><center>Formaci&oacute;n IP</center>
@@ -97,9 +99,8 @@
 </marquee>
 </font><br><br><br>
 
-<!--Aqui va una imagen-->
 <br><br><br><br><br>	
-<!--<center><img src="ccnaRandS2.jpg" height=150 width=150></center>-->
+<center><img src="ccnaRandS2.jpg" height=150 width=150></center>
 
 </div><!-- FIN DE LA COLUMNA GRIS -->
 
@@ -108,7 +109,7 @@
 <!--<a href="http://www.cisco.com/web/learning/le3/le2/le0/le9/learning_certification_type_home.html"><img src="ccnaRandS2.jpg" border="0"></a><br>-->
 
 <center><img src="ccnaRandS2.jpg" height=225 width=225></center><br><br>
-<h3>CCNA Routing & Switching (200-120)</h3><br>
+<h3>CCNA ROUTING & SWITCHING (200-120)</h3><br>
 <p align="justify">
 	La certificaci&oacute;n CCNA valida la capacidad de instalar, configurar, operar y resolver problemas de 
 	tama&ntilde;o mediano redes enrutadas y conmutadas.<br><br>
@@ -127,16 +128,16 @@
 <p align="justify">
 	Nuestro curso tiene dos objetivos principales  el primero es que el estudiante obtenga los  conocimientos 
 	suficientes y la  seguridad de configurar Routers y Switches  para poder enfrentar sin temor a una red 
-	en producción lo que se traduzca en un crecimiento laboral y profesional, el otro objetivo es  tener las 
-	herramientas suficientes para pasar el examen de certificación 200-120 y obtener su certificación CCNA.
+	en producci&oacute;n lo que se traduzca en un crecimiento laboral y profesional, el otro objetivo es  tener las 
+	herramientas suficientes para pasar el examen 200-120 y obtener su certificaci&oacute;n CCNA.
 </p><br>
 <p align="justify">
-	El curso es presencial  con cupo limitado de 6 personas para una mayor atención al estudiante, los laboratorios 
-	se realizan con equipo real, los instructores cuentan con varias certificaciones  y con años de experiencia 
-	laboral en grandes empresas de Tecnologías de la Información.  
+	El curso es presencial  con cupo limitado de 6 personas para una mayor atenci&oacute;n al estudiante, los laboratorios 
+	se realizan con equipo real, los instructores cuentan con varias certificaciones  y con a&ntilde;os de experiencia 
+	laboral en grandes empresas de Tecnolog&iacute;as de la Informaci&oacute;n.  
 </p>
 <p align="justify"><br>
-	Cualquier duda o comentario contactamos a través del correo  formacionip.informacion@gmail.com  y con gusto 
+	Cualquier duda o comentario cont&aacute;ctanos a trav&eacute;s del correo formacionip.informacion@gmail.com  y con gusto 
 	aclararemos tus dudas. 
 </p><br>
 
