--- a/FIP/InicialFIP/CCNP_RandS.html
+++ b/FIP/InicialFIP/CCNP_RandS.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
@@ -68,7 +69,7 @@
 				<ul>
 					<li><a href="CCNA_RandS.html">CCNA Routing & Switching</a></li>
 					<li><a href="CCNA_voice.html">CCNA Voice</a></li>
-					<li><a href="CCNP_RandS.html">CCNP Routing (Pr&oacute;ximamente)</a></li>
+					<li><a href="CCNP_RandS.html">CCNP Routing</a></li>
 				</ul>
 			</li>	
 			<li><a href="ventajas.html">Ventajas</a></li>
@@ -85,6 +86,7 @@
 <br>
 <div id="contenedor">
 
+<!--
 <div id="lateral">
 <font color="#708090">
 <marquee direction=up scrolldelay="1" height=50% scrollAmount="1" align="middle" onmouseover="this.stop()" onmouseout="this.start()"><hr align="RIGHT" size="0" width="300" color="white" noshade><center>Formaci&oacute;n IP</center>
@@ -98,13 +100,13 @@
 </marquee>
 </font>
 </div>
-
+-->
 <div id="principal">
 
 <center><img src="ccnpRandS.jpg" height=225 width=225></center><br><br>
 
 <p align="justify">
-	<h3>CCNA ROUTING & SWITCHING</h3><br>
+	<h3>CCNP ROUTING & SWITCHING</h3><br>
 
 	CCNP (Cisco Certified Network Professional) es el nivel intermedio de certificaci&oacute;n de la compa&ntilde;&icute;a. 
 	Para obtener esta certificaci&oacute;n, se han de superar varios ex&aacute;menes, clasificados seg&uacute;n la empresa en 4 m&oacute;dulos.
