--- a/FIP/InicialFIP/instalaciones.html
+++ b/FIP/InicialFIP/instalaciones.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
@@ -91,7 +92,7 @@
 				<ul>
 					<li><a href="CCNA_RandS.html">CCNA Routing & Switching</a></li>
 					<li><a href="CCNA_voice.html">CCNA Voice</a></li>
-					<li><a href="CCNP_RandS.html">CCNP Routing (Pr&oacute;ximamente)</a></li>
+					<li><a href="CCNP_RandS.html">CCNP Routing</a></li>
 				</ul>
 			</li>	
 			<li><a href="ventajas.html">Ventajas</a></li>
@@ -107,6 +108,7 @@
 <div id="main">
 <div id="contenedor">
 
+<!--
 <div id="lateral">
 <font color="#708090">
 
@@ -121,6 +123,7 @@
 </marquee>
 </font>
 </div>
+-->
 	
 	<center>
 	<div id="rotator2">
