--- a/FIP/InicialFIP/index.html
+++ b/FIP/InicialFIP/index.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+﻿
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="es" lang="es">
 <head>
@@ -8,7 +9,6 @@
 	<script type="text/javascript" src="xfade1.js"></script>
 	<!-- FIN DE ROTATION -->
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title></title>
 	<link rel="stylesheet" href="menu_nice_style.css" type="text/css" />
@@ -93,7 +93,7 @@
 				<ul>
 					<li><a href="CCNA_RandS.html">CCNA Routing & Switching</a></li>
 					<li><a href="CCNA_voice.html">CCNA Voice</a></li>
-					<li><a href="CCNP_RandS.html">CCNP Routing (Pr&oacute;ximamente)</a></li>
+					<li><a href="CCNP_RandS.html">CCNP Routing</a></li>
 				</ul>
 			</li>	
 			<li><a href="ventajas.html">Ventajas</a></li>
