--- a/FIP/InicialFIP/quienessomos.html
+++ b/FIP/InicialFIP/quienessomos.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+﻿
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="es" lang="es">
 <head>
@@ -83,7 +84,7 @@
 				<ul>
 					<li><a href="CCNA_RandS.html">CCNA Routing & Switching</a></li>
 					<li><a href="CCNA_voice.html">CCNA Voice</a></li>
-					<li><a href="CCNP_RandS.html">CCNP Routing (Pr&oacute;ximamente)</a></li>
+					<li><a href="CCNP_RandS.html">CCNP Routing</a></li>
 				</ul>
 			</li>	
 			<li><a href="ventajas.html">Ventajas</a></li>
@@ -99,6 +100,7 @@
 <div id="main">
 <div id="contenedor">
 
+<!--
 <div id="lateral">
 <font color="#708090">
 <marquee direction=up scrolldelay="1" height=50% scrollAmount="1" align="middle" onmouseover="this.stop()" onmouseout="this.start()"><hr align="RIGHT" size="0" width="300" color="white" noshade><center>Formaci&oacute;n IP</center>
@@ -113,6 +115,7 @@
 
 </font>
 </div>
+-->
 
 <div id="principal">
 
